# docs/swagger.json
@@ -221,7 +221,7 @@
         },
         "/user": {
             "get": {
-                "description": "Returns a list of all users",
+                "description": "Returns a list of all users with pagination",
                 "consumes": [
                     "application/json"
                 ],
@@ -231,7 +231,23 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Get all user's",
+                "summary": "Get all users",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Number of records per page",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Pagination offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful response with list of users",
@@ -248,6 +264,9 @@
                                             "items": {
                                                 "$ref": "#/definitions/user.User"
                                             }
+                                        },
+                                        "meta": {
+                                            "$ref": "#/definitions/api.Meta"
                                         }
                                     }
                                 }
@@ -257,7 +276,19 @@
                     "400": {
                         "description": "Bad request error",
                         "schema": {
-                            "$ref": "#/definitions/api.ResponseError"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.ResponseError"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -540,10 +571,21 @@
                 }
             }
         },
+        "api.Meta": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.ResponseData": {
             "type": "object",
             "properties": {
                 "data": {},
+                "meta": {
+                    "$ref": "#/definitions/api.Meta"
+                },
                 "status": {
                     "$ref": "#/definitions/api.StatusType"
                 }
